# crisp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.src/: audio_file.cpp  audio_file.inl  bayes_classifier.inl  benchmark.inl  binary_image.inl  color.inl  color_image.inl  common.inl  edge_detection.inl  fourier_transform.inl  fourier_transform_1d.inl  fourier_transform_2d.inl  frequency_domain_filter.inl  frequency_domain_filter_gpu.inl  fully_connected_neural_network.inl  grayscale_image.inl  hardware_accelerated_matrix.inl  histogram.inl  image_conversion.inl  image_io.inl  image_region.inl  input_handler.inl  julia_native_type.inl  julia_proxy.inl  julia_state.inl  morphological_transform.inl  multi_plane_image.inl  multi_plane_image_iterator.inl  noise_generator.inl  opengl_state.inl  pseudocolor_mapping.inl  pseudocolor_mapping_gpu.inl  render_window.inl  resource_path.hpp.in  salt_and_pepper_distribution.inl  segmentation.inl  shader.inl  spatial_filter.inl  spectrogram.inl  sprite.inl  (+10 more)
.test/: default.frag  default.vert  main.cpp  video_test.cpp
docs/: color.md  index.md  segmentation.md  system.md  vector.md
docs/color/: color.md  color_example.cpp
docs/feature_classification/: chicken_or_duck_nn_2_4_4_2.txt  deep_learning_example.cpp  feature_classification_and_deep_learning.md
docs/feature_extraction/: feature_extraction.md  feature_extraction_example.cpp
docs/frequency_domain/: frequency_domain_example.cpp  frequency_domain_filtering.md
docs/hardware_acceleration/: gpu_side.md  textures.md
docs/image/: image.md
docs/morphological_transform/: morphological_transform.md  morphological_transform_example.cpp
docs/noise/: noise.md
docs/segmentation/: segmentation.md  segmentation_example.cpp
docs/spatial_filters/: spatial_domain_filtering.md  spatial_filter_example.cpp
docs/system/: system.md  system_example.cpp
docs/vector/: vector.md
docs/video/: video.md
fftw-3.3.9/: Makefile  aclocal.m4  config.h  config.status  fftw.pc  libfftw3.la  libtool
fftw-3.3.9/.libs/: libfftw3.lai
fftw-3.3.9/api/: Makefile  apiplan.lo  configure.lo  execute-dft-c2r.lo  execute-dft-r2c.lo  execute-dft.lo  execute-r2r.lo  execute-split-dft-c2r.lo  execute-split-dft-r2c.lo  execute-split-dft.lo  execute.lo  export-wisdom-to-file.lo  export-wisdom-to-string.lo  export-wisdom.lo  f77api.lo  flops.lo  forget-wisdom.lo  import-system-wisdom.lo  import-wisdom-from-file.lo  import-wisdom-from-string.lo  import-wisdom.lo  libapi.la  malloc.lo  map-r2r-kind.lo  mapflags.lo  mkprinter-file.lo  mkprinter-str.lo  mktensor-iodims.lo  mktensor-iodims64.lo  mktensor-rowmajor.lo  plan-dft-1d.lo  plan-dft-2d.lo  plan-dft-3d.lo  plan-dft-c2r-1d.lo  plan-dft-c2r-2d.lo  plan-dft-c2r-3d.lo  plan-dft-c2r.lo  plan-dft-r2c-1d.lo  plan-dft-r2c-2d.lo  plan-dft-r2c-3d.lo  (+28 more)
fftw-3.3.9/dft/: Makefile  bluestein.lo  conf.lo  dftw-direct.lo  dftw-directsq.lo  dftw-generic.lo  dftw-genericbuf.lo  direct.lo  indirect-transpose.lo  kdft-dif.lo  kdft-difsq.lo  kdft-dit.lo  kdft.lo  libdft.la  plan.lo  rader.lo  solve.lo  vrank-geq1.lo  zero.lo
fftw-3.3.9/doc/: Makefile
fftw-3.3.9/genfft/: Makefile
fftw-3.3.9/kernel/: Makefile  align.lo  alloc.lo  assert.lo  awake.lo  cpy1d.lo  cpy2d-pair.lo  cpy2d.lo  ct.lo  debug.lo  extract-reim.lo  hash.lo  iabs.lo  kalloc.lo  libkernel.la  md5-1.lo  md5.lo  minmax.lo  ops.lo  pickdim.lo  planner.lo  primes.lo  print.lo  scan.lo  solver.lo  solvtab.lo  stride.lo  tensor.lo  tensor1.lo  tensor2.lo  tensor3.lo  tensor4.lo  tensor5.lo  tensor7.lo  tensor8.lo  tensor9.lo  tile2d.lo  timer.lo  transpose.lo  trig.lo  (+1 more)
fftw-3.3.9/libbench2/: Makefile
fftw-3.3.9/m4/: Makefile
fftw-3.3.9/mpi/: Makefile
fftw-3.3.9/rdft/: Makefile  buffered.lo  buffered2.lo  ct-hc2c-direct.lo  ct-hc2c.lo  dft-r2hc.lo  dht-r2hc.lo  dht-rader.lo  direct-r2c.lo  direct-r2r.lo  direct2.lo  generic.lo  hc2hc-direct.lo  hc2hc-generic.lo  hc2hc.lo  indirect.lo  khc2c.lo  khc2hc.lo  kr2c.lo  kr2r.lo  librdft.la  nop.lo  nop2.lo  plan2.lo  problem.lo  problem2.lo  rank-geq2-rdft2.lo  rank-geq2.lo  rank0-rdft2.lo  rank0.lo  rdft-dht.lo  rdft2-inplace-strides.lo  rdft2-rdft.lo  rdft2-strides.lo  rdft2-tensor-max-index.lo  solve2.lo  vrank-geq1-rdft2.lo  vrank3-transpose.lo
fftw-3.3.9/reodft/: Makefile  libreodft.la  redft00e-r2hc-pad.lo  reodft00e-splitradix.lo  reodft010e-r2hc.lo  reodft11e-r2hc-odd.lo  reodft11e-radix2.lo  rodft00e-r2hc-pad.lo
fftw-3.3.9/simd-support/: Makefile  altivec.lo  avx-128-fma.lo  avx.lo  avx2.lo  avx512.lo  kcvi.lo  libsimd_support.la  neon.lo  sse2.lo  taint.lo  vsx.lo
fftw-3.3.9/support/: Makefile
fftw-3.3.9/tests/: Makefile  bench
fftw-3.3.9/threads/: Makefile
fftw-3.3.9/tools/: Makefile  fftw-wisdom
include/: benchmark.hpp  classification.hpp  color.hpp  edge_detection.hpp  fourier_transform.hpp  frequency_domain_filter.hpp  gpu_side.hpp  histogram.hpp  image.hpp  image_region.hpp  image_segment.hpp  morphological_transform.hpp  noise_generator.hpp  padding_type.hpp  pseudocolor_mapping.hpp  segmentation.hpp  spatial_filter.hpp  structuring_element.hpp  system.hpp  vector.hpp  whole_image_transform.hpp  ~image_region.hpp
include/.classification/: fully_connected_neural_network.hpp  perceptron.hpp  sift.hpp  ~fully_connected_neural_network.hpp
include/audio/: audio_file.hpp  audio_stream.hpp  filter.hpp  spectrogram.hpp  window_function.hpp
include/classification/: bayes_classifier.hpp  convolutional_neural_network.hpp  fully_connected_neural_network.hpp  sift.hpp
include/gpu_side/: hardware_accelerated_matrix.hpp  is_gpu_side.hpp  native_handle.hpp  opengl_state.hpp  shader.hpp  state.hpp  texture.hpp  texture_workspace.hpp  whole_texture_transform.hpp  ~shader.hpp
include/image/: binary_image.hpp  color_image.hpp  grayscale_image.hpp  image_conversion.hpp  image_segment.hpp  multi_plane_image.hpp  padding_type.hpp
include/julia/: julia_native_type.hpp  julia_proxy.hpp  julia_state.hpp
include/system/: image_io.hpp  input_handler.hpp  key_id.hpp  render_window.hpp  sprite.hpp
include/texture/: native_handle.hpp  shader.hpp  (+2 more)
(+379 files in other folders)
